letras mas grandes en responsive

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     
     <div class="products">
-        <h1 class="our-products">Nuestros productos</h1>
+        <h1 class="our-products bold-text">Nuestros productos</h1>
         <div class="container">
             <div class="row">
                 <div class="box col-lg-4">
