--- a/nuestra-historia.html
+++ b/nuestra-historia.html
@@ -90,6 +90,11 @@
                 <a href="www.instagram.com"><img src="/src/img/icons8-instagram.svg" alt="Instagram"></a>
                 <a href="www.twitter.com"><img src="/src/img/icons8-twitter.svg" alt="Twitter"></a>
             </div>
+        </div>
+        <div class="footer-bottom">
+            &copy; 2024 Piaceres Resto. Esta página fue creada por <strong>Nadia Antonella Ruiz</strong>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
