--- a/nuestra-historia.html
+++ b/nuestra-historia.html
@@ -35,7 +35,7 @@
     <div class="historia-section">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <img src="https://via.placeholder.com/500" alt="Historia del restaurante" class="img-fluid rounded">
+                <img src="src/img/nuestra-historia.jpg" alt="Historia del restaurante" class="img-fluid rounded">
             </div>
             <div class="col-md-6">
                 <h2>Nuestra Historia</h2>
@@ -47,7 +47,7 @@
     <div class="valores-section">
         <div class="row align-items-center">
             <div class="col-md-6 order-md-2">
-                <img src="https://via.placeholder.com/500" alt="Nuestros valores" class="img-fluid rounded">
+                <img src="/src/img/nuestros-valores.jpg" alt="Nuestros valores" class="img-fluid rounded">
             </div>
             <div class="col-md-6 order-md-1">
                 <h2>Nuestros Valores</h2>
