--- a/nuestra-historia.html
+++ b/nuestra-historia.html
@@ -56,6 +56,17 @@
         </div>
     </div>
     
+    <div class="historia-section">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <img src="src/img/nuestra-historia.jpg" alt="Historia del restaurante" class="img-fluid rounded">
+            </div>
+            <div class="col-md-6">
+                <h2>Nuestra Historia</h2>
+                <p>Desde nuestros comienzos, hemos trabajado para ofrecer platillos deliciosos y un ambiente acogedor. Cada receta tiene una historia, y estamos orgullosos de compartirla contigo.</p>
+            </div>
+        </div>
+    </div>
 
     
     <footer>
