--- a/nuestra-historia.html
+++ b/nuestra-historia.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-md-6">
                 <h2>Nuestra Historia</h2>
-                <p>Desde nuestros comienzos, hemos trabajado para ofrecer platillos deliciosos y un ambiente acogedor. Cada receta tiene una historia, y estamos orgullosos de compartirla contigo.</p>
+                <p>Comenzamos como un pequeño restaurante, con la misión de demostrar que comer de forma responsable y consciente no tiene por qué ser aburrido ni insípido. A lo largo de los años, nos comprometimos a ofrecer platos innovadores, utilizando solo ingredientes frescos y de calidad, y trabajando de manera cercana con productores locales. Hoy, somos un referente en la comunidad, y seguimos creciendo con el mismo amor y dedicación que nos impulsó desde el principio.</p>
             </div>
         </div>
     </div>
@@ -51,19 +51,19 @@
             </div>
             <div class="col-md-6 order-md-1">
                 <h2>Nuestros Valores</h2>
-                <p>Creemos en la sostenibilidad, la calidad y el servicio excepcional. Nos comprometemos a trabajar con ingredientes frescos y apoyar a productores locales.</p>
+                <p>Le damos suma importancia a la frescura de los ingredientes, el compromiso con el bienestar animal y humano, y la creación de un ambiente acogedor y responsable. Creemos que una alimentación saludable puede ser deliciosa y accesible, siempre cuidando el impacto en nuestro entorno y apoyando prácticas éticas en cada etapa de nuestra oferta gastronómica.</p>
             </div>
         </div>
     </div>
     
-    <div class="historia-section">
+    <div class="mision-vision-section">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <img src="src/img/nuestra-historia.jpg" alt="Historia del restaurante" class="img-fluid rounded">
+                <img src="/src/img/mision-vision-comida.jpg" alt="Historia del restaurante" class="img-fluid rounded">
             </div>
             <div class="col-md-6">
-                <h2>Nuestra Historia</h2>
-                <p>Desde nuestros comienzos, hemos trabajado para ofrecer platillos deliciosos y un ambiente acogedor. Cada receta tiene una historia, y estamos orgullosos de compartirla contigo.</p>
+                <h2>Misión y Visión</h2>
+                <p>Nos dedicamos a ofrecer una experiencia gastronómica única con platos vegetarianos frescos, saludables y sostenibles, buscando promover un estilo de vida consciente y delicioso. Nuestra visión es ser el referente en la ciudad para aquellos que buscan una alimentación ética y saludable, innovando constantemente para brindar opciones sabrosas y responsables con el medio ambiente.</p>
             </div>
         </div>
     </div>
